# time_slots

./: .claudeignore  .gitignore  claude.md  env.example  pyproject.toml  requirements.txt  x.md
app/: mypy.ini
app/bookings/: admin.py  models.py  services.py  urls.py  views.py
app/bookings/migrations/: 0001_initial.py  0002_slot_current_count.py  0003_alter_booking_unique_together.py  0004_remove_slot_current_count_alter_booking_status.py
app/bookings/scripts/bookings/: create_booking.py  create_slots.py
app/bookings/templates/bookings/: booking_list.html  slot_list.html
app/clients/: admin.py  models.py  services.py  urls.py  utils.py  views.py
app/clients/migrations/: 0001_initial.py  0002_client_source_name.py  0003_client_address_client_contact_full_name_client_email_and_more.py
app/clients/templates/clients/: client_list.html
app/config/: settings.py  urls.py
app/containers/: admin.py  models.py  urls.py  views.py
app/containers/book_readers/: container_separator.py  dto.py  exception.py  utils.py
app/containers/book_readers/call_to_client_reader/: __init__.py  converter.py  dto.py
app/containers/book_readers/unloading_reader/: __init__.py  converter.py  (+3 more)
app/containers/migrations/: 0001_initial.py  0002_container_client.py  0003_container_status.py  0004_alter_container_status.py
app/containers/services/: container_sync.py  sync.py
app/core/: exceptions.py
app/scripts/: delete_all.py  feed_db.py
app/staticfiles/css/: style.css
app/templates/: base.html
app/users/: admin.py  models.py
app/users/migrations/: 0001_initial.py
(+4 files in other folders)
